--- a/src/index.html
+++ b/src/index.html
@@ -63,9 +63,9 @@
                   <div class="card-body">
                     <h1 class="card-title pricing-card-title"><p><font color="blue"><b><span  id="temp2"></span></b></font><small class="text-muted fw-light">℃</small></h1>
                     <ul class="list-unstyled mt-3 mb-4">
-                      <li>Temperature is <span  id="temp"></span></li>
-                      <li>Max Temp : <span id="max_temp"></span></li>
-                      <li>Min Temp : <span id="min_temp"></span></li>
+                      <li>Temperature is <span  id="temp"></span>℃</li>
+                      <li>Max Temp : <span id="max_temp"></span>℃</li>
+                      <li>Min Temp : <span id="min_temp"></span>℃</li>
                     </ul>
                   </div>
                 </div>
@@ -78,9 +78,9 @@
                   <div class="card-body">
                     <h1 class="card-title pricing-card-title"><p><font color="Green"><b><span  id="humidity2"></span></b></font><small class="text-muted fw-light">%</small></h1>
                     <ul class="list-unstyled mt-3 mb-4">
-                      <li>Cloud pct is <span  id="cloud_pct"></span></li>
-                      <li>Feels Like : <span  id="feels_like"></span></li>
-                      <li>Humidity : <span  id="humidity"></span></li>
+                      <li>Cloud percentage is <span  id="cloud_pct"></span>%</li>
+                      <li>Feels Like : <span  id="feels_like"></span>℃</li>
+                      <li>Humidity : <span  id="humidity"></span>%</li>
                     </ul>
                   </div>
                 </div>
@@ -93,7 +93,7 @@
                   <div class="card-body">
                     <h1 class="card-title pricing-card-title"><p><font color="orange"><span  id="wind_speed2"></span></font><small class="text-muted fw-light"> Km/hr</small></h1>
                     <ul class="list-unstyled mt-3 mb-4">
-                      <li> Wind Speed : <span  id="wind_speed"></span></li>
+                      <li> Wind Speed : <span  id="wind_speed"></span> Km/hr</li>
                       <li>sunrise : <span  id="sunrise"></span></li>
                       <li>sunset : <span  id="sunset"></span></li>
                     </ul>
